feat: add endpoint /info with portfolio info with test and swagger
